--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <!--About Us-->
           <div class="about">
             <div class="row">
-                <div class="col-lg-6 sm-12">
+                <div class="col-lg-6 sm-12" align="center">
                   <h1>About Us</h1>
                   <p><h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit velit ad, aut quam mollitia cupiditate soluta placeat saepe minus eum molestias possimus tenetur ut quas voluptatibus distinctio quidem quaerat sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum atque voluptate modi accusamus, veniam porro. Adipisci labore quam blanditiis, provident natus molestiae consequatur mollitia quaerat vel harum necessitatibus ipsam enim.</h5></p>
                 </div>
-                <div class="col-lg-6 sm-12">
+                <div class="col-lg-6 sm-12" align="center">
                   <div id="carouselExampleControls" class="carousel slide car" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -90,9 +90,38 @@
 
           </div>
     <!--Services-->
-          <div>
+          <div class="services">
             <center>
-              <h1>Services</h1>
+              <h1 class="head">Services</h1>
+
+            <div class="row">
+                <div class="col-lg-3 col-md-6 sm-12 serv"">
+                  <div class="serv-items"></div>
+                </div>
+                <div class="col-lg-3 col-md-6 sm-12 serv">
+                  <div class="serv-items"></div>
+                </div>
+                <div class="col-lg-3 col-md-6 sm-12 serv">
+                  <div class="serv-items"></div>
+                </div>
+                <div class="col-lg-3 col-md-6 sm-12 serv">
+                  <div class="serv-items"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3 col-md-6 sm-12 serv"">
+                  <div class="serv-items"></div>
+                </div>
+                <div class="col-lg-3 col-md-6 sm-12 serv">
+                  <div class="serv-items"></div>
+                </div>
+                <div class="col-lg-3 col-md-6 sm-12 serv">
+                  <div class="serv-items"></div>
+                </div>
+                <div class="col-lg-3 col-md-6 sm-12 serv">
+                  <div class="serv-items"></div>
+                </div>
+              </div>
 
             </center>
           </div>
