--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav mx-auto">
+                  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav mx-auto ">
 
                       <a class="nav-link itemheight" href="#">
                         <h6 class="items-feat">About Us</h6>
@@ -54,8 +54,10 @@
           <div class="about">
             <div class="row">
                 <div class="col-lg-6 sm-12" align="center">
+                  <div class="aboutbox">
                   <h1>About Us</h1>
                   <p><h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit velit ad, aut quam mollitia cupiditate soluta placeat saepe minus eum molestias possimus tenetur ut quas voluptatibus distinctio quidem quaerat sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum atque voluptate modi accusamus, veniam porro. Adipisci labore quam blanditiis, provident natus molestiae consequatur mollitia quaerat vel harum necessitatibus ipsam enim.</h5></p>
+                </div>
                 </div>
                 <div class="col-lg-6 sm-12" align="center">
                   <div id="carouselExampleControls" class="carousel slide car" data-bs-ride="carousel">
@@ -92,40 +94,72 @@
     <!--Services-->
           <div class="services">
             <center>
-              <h1 class="head">Services</h1>
+              <h1 class="head">Our Services</h1>
 
             <div class="row">
                 <div class="col-lg-3 col-md-6 sm-12 serv"">
-                  <div class="serv-items"></div>
+                  <div class="serv-items hardscap">
+                    <h2>Hardscaping</h2>
+                  </div>
                 </div>
                 <div class="col-lg-3 col-md-6 sm-12 serv">
-                  <div class="serv-items"></div>
+                  <div class="serv-items paving">
+                    <h2>Paving</h2>
+                  </div>
                 </div>
                 <div class="col-lg-3 col-md-6 sm-12 serv">
-                  <div class="serv-items"></div>
+                  <div class="serv-items mason">
+                    <h2>Masonry</h2>
+                  </div>
                 </div>
                 <div class="col-lg-3 col-md-6 sm-12 serv">
-                  <div class="serv-items"></div>
+                  <div class="serv-items conc">
+                    <h2>Concrete</h2>
+                  </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-3 col-md-6 sm-12 serv"">
-                  <div class="serv-items"></div>
+                  <div class="serv-items stampconc">
+                    <h2>Stamped<br>Concrete</h2>
+                  </div>
                 </div>
                 <div class="col-lg-3 col-md-6 sm-12 serv">
-                  <div class="serv-items"></div>
+                  <div class="serv-items stonven">
+                    <h2>Stone veneer</h2>
+                  </div>
                 </div>
                 <div class="col-lg-3 col-md-6 sm-12 serv">
-                  <div class="serv-items"></div>
+                  <div class="serv-items design">
+                    <h2>Personalized 1/4 Design</h2>
+                  </div>
                 </div>
                 <div class="col-lg-3 col-md-6 sm-12 serv">
-                  <div class="serv-items"></div>
+                  <div class="serv-items outdoor">
+                    <h2>Outdoor<br>Design</h2>
+                  </div>
                 </div>
               </div>
 
             </center>
           </div>
-
+          <hr>
+    <!--Gallery-->
+    <div class="backgal">
+      <center>
+      <h1 class="galtitle">Gallery</h1>
+      <div class="row photos">
+        <div class="col-sm-6 col-md-4 col-lg-3"><a href="images/IMG_3667.jpg"><img class="galitem" src="images/IMG_3667.jpg" alt=""></a></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><a href="images/IMG_4639.jpg"><img class="galitem" src="images/IMG_4639.jpg" alt=""></a></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><a href="images/IMG_4014.jpg"><img class="galitem" src="images/IMG_4014.jpg" alt=""></a></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><a href="images/IMG_4606.jpg"><img class="galitem" src="images/IMG_4606.jpg" alt=""></a></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><a href="images/IMG_4638.jpg"><img class="galitem" src="images/IMG_4638.jpg" alt=""></a></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><a href="images/galimg.jpg"><img class="galitem" src="images/galimg.jpg" alt=""></a></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><a href="images/galimg2.jpg"><img class="galitem" src="images/galimg2.jpg" alt=""></a></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><a href="images/IMG_4642.jpg"><img class="galitem" src="images/IMG_4642.jpg" alt=""></a></div>
+      </div>
+      </center>
+    </div>
       <!--END-->
     </div>
 
